Updated home page and navigation 	- The logo displayed on navigation no longer stretches out when the user's is in the mobile view. 	- The style of the intro info on the home page has been updated to have a better style.

--- a/src/App.scss
+++ b/src/App.scss
@@ -76,6 +76,16 @@ img {
   width: fit-content !important;
 }
 
+// Sets an element to break a word at the end of the line and use hyphens
+.text-auto-hyphens {
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+  word-wrap: break-word;
+  word-break: break-word;
+}
+
 // 1. BOOTSTRAP VARIABLE OVERIDES
 $primary: #242424;
 $secondary: #8685ef;
